--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,17 @@ body {
   transform-style: preserve-3d;
   will-change: transform;
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-scroll {
+  display: flex;
+  animation: scroll 20s linear infinite; /* Adjust duration as needed */
+}
